# pplay

./: CMakeLists.txt  LICENSE  README.md  README.rst  makeup.sh  pplay.py  requirements.txt  setup.py  smcap2pcap
examples/: simple1_pps.py  simple2_pps.py  smtp_starttls_pps.py
samples/: ipv6.pcapng  ipv6.smcap  ipv6_many.pcapng  ocsp.pcapng  smcap_sample.smcap
